[package]
name = "implementation"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Audun Halland <audun.halldand@pm.me>"]
description = "The implementation crate"
repository = "https://github.com/audunhalland/implementation/"
keywords = ["impl", "implementation", "actual", "real"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
